# filereducelib

./: .gitignore  Cargo.toml  README.md  output_metrics.txt  outputfull.fra
examples/: compress_demo.rs  seek_demo.rs  test_real_file.rs
src/: lib.rs
