[package]
name = "filereducelib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
hashbrown = { version = "0.14", features = ["rayon", "serde"] }
thiserror = "1.0"
rayon = "1.10"
anyhow = "1.0" # Useful for examples/tests

