[package]
name = "filereducelib"
version = "0.1.0"
edition = "2021"
description = "High-performance, constant-memory compression library for structured data (JSONL) producing .fra archives."
license = "MIT"
repository = "https://github.com/Omar52344/filereducelib"
readme = "README.md"
keywords = ["compression", "jsonl", "big-data", "streaming", "zstd"]
categories = ["compression", "data-structures", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = { version = "0.13", default-features = true, features = [] }
hashbrown = { version = "0.14", features = ["serde"] }
thiserror = "1.0"

[features]
default = ["parallel"]
parallel = ["rayon", "hashbrown/rayon"]
wasm = ["zstd/wasm"]

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true

